// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled-components sawmill should generate dark theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "button": {
      "danger": {
        "background": "#eb0000",
        "color": "rgb(254,249,249)",
      },
      "default": {
        "background": "#767676",
        "color": "rgb(250,250,250)",
      },
      "gray": {
        "background": "#6F768F",
        "color": "rgb(250,250,251)",
      },
      "info": {
        "background": "#0000eb",
        "color": "rgb(221,221,250)",
      },
      "primary": {
        "background": "#760076",
        "color": "rgb(223,213,223)",
      },
      "success": {
        "background": "#007600",
        "color": "rgb(249,250,249)",
      },
      "warning": {
        "background": "#ebeb00",
        "color": "rgb(74,74,0)",
      },
    },
    "contrast": {
      "danger": "rgb(254,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(191,192,195)",
      "info": "rgb(221,221,250)",
      "primary": "rgb(223,213,223)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(74,74,0)",
    },
    "disabled": {
      "danger": {
        "background": "#ef6969",
        "color": "rgb(254,250,250)",
      },
      "default": {
        "background": "#9b9595",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#77717b",
        "color": "rgb(250,250,250)",
      },
      "info": {
        "background": "#7269eb",
        "color": "rgb(250,250,254)",
      },
      "primary": {
        "background": "#9b6995",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729569",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#d6d732",
        "color": "rgb(83,83,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#bfe7ff",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(20,20,20,0.5)",
      "textAlt": "#ffebeb",
      "textDefault": "#5c6370",
    },
    "gray": {
      "10": "#5c6370",
      "100": "#ffebeb",
      "20": "#6e727e",
      "30": "#80818b",
      "40": "#929099",
      "50": "#a49fa7",
      "60": "#b7afb4",
      "70": "#c9bec2",
      "80": "#dbcdd0",
      "90": "#eddcdd",
    },
    "input": {
      "background": "#1C2235",
      "backgroundDisabled": "#181d2e",
      "border": "rgba(154,154,154,0.74)",
      "borderFocus": "#0000ce",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,0,206,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#b7afb4",
      "placeholder": "#b7afb4",
    },
    "newsCards": {
      "background": "#252D47",
    },
    "pagination": {
      "active": {
        "background": "#0000eb",
        "border": "#0000eb",
        "color": "#ffffff",
      },
    },
    "table": {
      "head": {
        "background": "#252D47",
      },
      "row": {
        "background": "transparent",
        "backgroundAlt": "rgba(225,228,237,0.08)",
        "backgroundHover": "rgba(193,199,220,0.2)",
        "border": "rgba(225,228,237,0.2)",
      },
      "variant": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#ce0000",
        "info": "#0000ce",
        "primary": "#670067",
        "success": "#006700",
        "warning": "#cece00",
      },
      "variantHover": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#800000",
        "info": "#000080",
        "primary": "#400040",
        "success": "#004000",
        "warning": "#808000",
      },
    },
    "variant": {
      "danger": "#eb0000",
      "dark": {
        "danger": "#FF0000",
        "default": "#808080",
        "gray": "#394261",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
      "darker": {
        "danger": "#ff9797",
        "default": "#b7b7b7",
        "gray": "#C1C7DC",
        "info": "#9797ff",
        "primary": "#b797b7",
        "success": "#97b797",
        "warning": "#ffff97",
      },
      "darkest": {
        "danger": "#ffdddd",
        "default": "#e6e6e6",
        "gray": "#F6F7FC",
        "info": "#ddddff",
        "primary": "#e6dde6",
        "success": "#dde6dd",
        "warning": "#ffffdd",
      },
      "default": "#767676",
      "gray": "#252D47",
      "info": "#0000eb",
      "light": {
        "danger": "#ce0000",
        "default": "#676767",
        "gray": "#232B43",
        "info": "#0000ce",
        "primary": "#670067",
        "success": "#006700",
        "warning": "#cece00",
      },
      "lighter": {
        "danger": "#800000",
        "default": "#404040",
        "gray": "#12182B",
        "info": "#000080",
        "primary": "#400040",
        "success": "#004000",
        "warning": "#808000",
      },
      "lightest": {
        "danger": "#390000",
        "default": "#1d1d1d",
        "gray": "#060C1F",
        "info": "#000039",
        "primary": "#1d001d",
        "success": "#001d00",
        "warning": "#393900",
      },
      "primary": "#760076",
      "success": "#007600",
      "warning": "#ebeb00",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #dbcdd0;
    border-radius: 5px;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #e6e6e6;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #1d1d1d;
      color: #e6e6e6;
    }

    .ace_print-margin {
      width: 1px;
      background: #1d1d1d;
    }

    .ace_cursor {
      color: #676767;
    }

    .ace_marker-layer {
      .ace_selection {
        background: #c9bec2;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #c9bec2;
      }

      .ace_selected-word {
        border: 1px solid #b7afb4;
      }

      .ace_active-line {
        background: #404040;
      }
    }

    .ace_gutter-active-line {
      background-color: #404040;
    }

    .ace_invisible {
      color: #c9bec2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #9797ff;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #b797b7;
    }

    .ace_constant.ace_other {
      color: #b7b7b7;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #ce0000;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #760076;
    }

    .ace_fold {
      background-color: #0000eb;
      border-color: #e6e6e6;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000eb;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #ffff97;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #97b797;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #ce0000;
    }

    .ace_comment {
      color: #808080;
    }
  }
",
    "button": [
      "
      &.btn-danger {
        background-color: #eb0000;
        border-color: #ec3535;
        color: rgb(254,249,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #dc262b;
          border-color: #dc3e41;
          color: #ede9ea;
        }

        &.active {
          background-color: #ed4a4a;
          border-color: #ee5b5b;
          color: rgb(254,249,249);

          &:hover {
            background-color: #dd4e51;
            border-color: #de5c5e;
            color: #ede9ea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #ef6969;
          border-color: #ee5b5b;
          color: rgb(254,250,250);

          &:hover {
            background-color: #ef6969;
            border-color: #ee5b5b;
            color: rgb(254,250,250);
          }
        }
      }
",
      "
      &.btn-default {
        background-color: #eddcdd;
        border-color: #e8d8d9;
        color: rgb(75,70,70);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ddced0;
          border-color: #d9cbcd;
          color: #4e4b4e;
        }

        &.active {
          background-color: #e3d3d5;
          border-color: #ddced0;
          color: rgb(51,47,48);

          &:hover {
            background-color: #d4c6c9;
            border-color: #cfc2c5;
            color: #3b3a3e;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d8cacc;
          border-color: #ddced0;
          color: rgb(84,78,79);

          &:hover {
            background-color: #d8cacc;
            border-color: #ddced0;
            color: rgb(84,78,79);
          }
        }
      }
",
      "
      &.btn-info {
        background-color: #0000eb;
        border-color: #3935eb;
        color: rgb(221,221,250);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #2426dd;
          border-color: #3f3edd;
          color: #cfcfeb;
        }

        &.active {
          background-color: #514aeb;
          border-color: #635beb;
          color: rgb(249,249,254);

          &:hover {
            background-color: #534edd;
            border-color: #625cdd;
            color: #e8e9ee;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #7269eb;
          border-color: #635beb;
          color: rgb(250,250,254);

          &:hover {
            background-color: #7269eb;
            border-color: #635beb;
            color: rgb(250,250,254);
          }
        }
      }
",
      "
      &.btn-link {
        background-color: rgba(255, 255, 255, 0);
        border-color: rgba(255, 255, 255, 0);
        color: #8cb5ea;
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: transparent;
          border-color: transparent;
          color: #bfe7ff;
        }

        &.active {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #bfe7ff;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: transparent;
            color: #bfe7ff;
          }
        }

        &[disabled],
        &.disabled {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #8cb5ea;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: rgba(255, 255, 255, 0);
            color: #8cb5ea;
          }
        }
      }
",
      "
      &.btn-primary {
        background-color: #760076;
        border-color: #80357e;
        color: rgb(223,213,223);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #722675;
          border-color: #7b3e7c;
          color: #d1c8d2;
        }

        &.active {
          background-color: #8a4a86;
          border-color: #935b8e;
          color: rgb(250,249,250);

          &:hover {
            background-color: #844e83;
            border-color: #8c5c8a;
            color: #e9e9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #9b6995;
          border-color: #935b8e;
          color: rgb(251,250,251);

          &:hover {
            background-color: #9b6995;
            border-color: #935b8e;
            color: rgb(251,250,251);
          }
        }
      }
",
      "
      &.btn-success {
        background-color: #007600;
        border-color: #397e35;
        color: rgb(249,250,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #24732b;
          border-color: #3f7a41;
          color: #e8eaea;
        }

        &.active {
          background-color: #51864a;
          border-color: #638e5b;
          color: rgb(249,250,249);

          &:hover {
            background-color: #538151;
            border-color: #62885e;
            color: #e8eaea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #729569;
          border-color: #638e5b;
          color: rgb(250,251,250);

          &:hover {
            background-color: #729569;
            border-color: #638e5b;
            color: rgb(250,251,250);
          }
        }
      }
",
      "
      &.btn-warning {
        background-color: #ebeb00;
        border-color: #e6e619;
        color: rgb(74,74,0);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #dcdc2b;
          border-color: #d7d731;
          color: #4d4e2b;
        }

        &.active {
          background-color: #e1e123;
          border-color: #dcdc2b;
          color: rgb(50,50,8);

          &:hover {
            background-color: #d2d336;
            border-color: #cece3b;
            color: #3a3c2c;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d6d732;
          border-color: #dcdc2b;
          color: rgb(83,83,19);

          &:hover {
            background-color: #d6d732;
            border-color: #dcdc2b;
            color: rgb(83,83,19);
          }
        }
      }
",
      "
      &.btn-gray {
        background-color: #252D47;
        border-color: #434457;
        color: rgb(191,192,195);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #31384f;
          border-color: #47495b;
          color: #b4b5b9;
        }

        &.active {
          background-color: #585664;
          border-color: #686470;
          color: rgb(249,249,250);

          &:hover {
            background-color: #595866;
            border-color: #666470;
            color: #e8e9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #77717b;
          border-color: #686470;
          color: rgb(250,250,250);

          &:hover {
            background-color: #77717b;
            border-color: #686470;
            color: rgb(250,250,250);
          }
        }
      }
",
    ],
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "dark",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;

exports[`styled-components sawmill should generate light theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "button": {
      "danger": {
        "background": "#e10000",
        "color": "rgb(254,249,249)",
      },
      "default": {
        "background": "#717171",
        "color": "rgb(250,250,250)",
      },
      "gray": {
        "background": "rgba(193,199,220,0.4)",
        "color": "rgba(43,44,49,0.9700000000000002)",
      },
      "info": {
        "background": "#0000e1",
        "color": "rgb(213,213,246)",
      },
      "primary": {
        "background": "#710071",
        "color": "rgb(216,206,216)",
      },
      "success": {
        "background": "#007100",
        "color": "rgb(249,250,249)",
      },
      "warning": {
        "background": "#e1e100",
        "color": "rgb(50,50,0)",
      },
    },
    "contrast": {
      "danger": "rgb(254,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(191,192,195)",
      "info": "rgb(213,213,246)",
      "primary": "rgb(216,206,216)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(50,50,0)",
    },
    "disabled": {
      "danger": {
        "background": "#e76969",
        "color": "rgb(254,250,250)",
      },
      "default": {
        "background": "#989292",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#77717b",
        "color": "rgb(250,250,250)",
      },
      "info": {
        "background": "#7269e3",
        "color": "rgb(250,250,254)",
      },
      "primary": {
        "background": "#986992",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729269",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#cdce32",
        "color": "rgb(79,80,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#5b85b8",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(245,246,248,0.5)",
      "textAlt": "#ffebeb",
      "textDefault": "#5c6370",
    },
    "gray": {
      "10": "#5c6370",
      "100": "#ffebeb",
      "20": "#6e727e",
      "30": "#80818b",
      "40": "#929099",
      "50": "#a49fa7",
      "60": "#b7afb4",
      "70": "#c9bec2",
      "80": "#dbcdd0",
      "90": "#eddcdd",
    },
    "input": {
      "background": "#0b42ff",
      "backgroundDisabled": "#0a39dd",
      "border": "#C1C7DC",
      "borderFocus": "#0000FF",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,0,255,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#b7afb4",
      "placeholder": "#b7afb4",
    },
    "newsCards": {
      "background": "#E1E4ED",
    },
    "pagination": {
      "active": {
        "background": "#0000e1",
        "border": "#0000e1",
        "color": "#ffffff",
      },
    },
    "table": {
      "head": {
        "background": "rgba(225,228,237,0.18)",
      },
      "row": {
        "background": "transparent",
        "backgroundAlt": "rgba(225,228,237,0.2)",
        "backgroundHover": "rgba(193,199,220,0.2)",
        "border": "rgba(225,228,237,0.75)",
      },
      "variant": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#FF0000",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
      "variantHover": {
        "active": "rgba(193,199,220,0.2)",
        "danger": "#ff9e9e",
        "info": "#9e9eff",
        "primary": "#bb9ebb",
        "success": "#9ebb9e",
        "warning": "#ffff9e",
      },
    },
    "variant": {
      "danger": "#e10000",
      "dark": {
        "danger": "#c80000",
        "default": "#646464",
        "gray": "#232B43",
        "info": "#0000c8",
        "primary": "#640064",
        "success": "#006400",
        "warning": "#c8c800",
      },
      "darker": {
        "danger": "#880000",
        "default": "#444444",
        "gray": "#12182B",
        "info": "#000088",
        "primary": "#440044",
        "success": "#004400",
        "warning": "#888800",
      },
      "darkest": {
        "danger": "#580000",
        "default": "#2c2c2c",
        "gray": "#060C1F",
        "info": "#000058",
        "primary": "#2c002c",
        "success": "#002c00",
        "warning": "#585800",
      },
      "default": "#717171",
      "gray": "#252D47",
      "info": "#0000e1",
      "light": {
        "danger": "#FF0000",
        "default": "#808080",
        "gray": "#394261",
        "info": "#0000FF",
        "primary": "#800080",
        "success": "#008000",
        "warning": "#FFFF00",
      },
      "lighter": {
        "danger": "#ff9e9e",
        "default": "#bbbbbb",
        "gray": "#C1C7DC",
        "info": "#9e9eff",
        "primary": "#bb9ebb",
        "success": "#9ebb9e",
        "warning": "#ffff9e",
      },
      "lightest": {
        "danger": "#ffd8d8",
        "default": "#e2e2e2",
        "gray": "#F6F7FC",
        "info": "#d8d8ff",
        "primary": "#e2d8e2",
        "success": "#d8e2d8",
        "warning": "#ffffd8",
      },
      "primary": "#710071",
      "success": "#007100",
      "warning": "#e1e100",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #dbcdd0;
    border-radius: 5px;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #2c2c2c;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #e2e2e2;
      color: #2c2c2c;
    }

    .ace_print-margin {
      width: 1px;
      background: #e2e2e2;
    }

    .ace_cursor {
      color: #808080;
    }

    .ace_marker-layer {
      .ace_selection {
        background: #c9bec2;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #c9bec2;
      }

      .ace_selected-word {
        border: 1px solid #b7afb4;
      }

      .ace_active-line {
        background: #bbbbbb;
      }
    }

    .ace_gutter-active-line {
      background-color: #bbbbbb;
    }

    .ace_invisible {
      color: #c9bec2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #000088;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #440044;
    }

    .ace_constant.ace_other {
      color: #444444;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #FF0000;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #710071;
    }

    .ace_fold {
      background-color: #0000e1;
      border-color: #2c2c2c;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000e1;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #888800;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #004400;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #FF0000;
    }

    .ace_comment {
      color: #646464;
    }
  }
",
    "button": [
      "
      &.btn-danger {
        background-color: #e10000;
        border-color: #e33535;
        color: rgb(254,249,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #d2262b;
          border-color: #d43e41;
          color: #ede9ea;
        }

        &.active {
          background-color: #e44a4a;
          border-color: #e65b5b;
          color: rgb(254,249,249);

          &:hover {
            background-color: #d54e51;
            border-color: #d75c5e;
            color: #ede9ea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #e76969;
          border-color: #e65b5b;
          color: rgb(254,250,250);

          &:hover {
            background-color: #e76969;
            border-color: #e65b5b;
            color: rgb(254,250,250);
          }
        }
      }
",
      "
      &.btn-default {
        background-color: #eddcdd;
        border-color: #e8d8d9;
        color: rgb(75,70,70);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ddced0;
          border-color: #d9cbcd;
          color: #4e4b4e;
        }

        &.active {
          background-color: #e3d3d5;
          border-color: #ddced0;
          color: rgb(51,47,48);

          &:hover {
            background-color: #d4c6c9;
            border-color: #cfc2c5;
            color: #3b3a3e;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d8cacc;
          border-color: #ddced0;
          color: rgb(84,78,79);

          &:hover {
            background-color: #d8cacc;
            border-color: #ddced0;
            color: rgb(84,78,79);
          }
        }
      }
",
      "
      &.btn-info {
        background-color: #0000e1;
        border-color: #3935e2;
        color: rgb(213,213,246);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #2426d4;
          border-color: #3f3ed5;
          color: #c8c8e7;
        }

        &.active {
          background-color: #514ae2;
          border-color: #635be3;
          color: rgb(249,249,254);

          &:hover {
            background-color: #534ed5;
            border-color: #625cd6;
            color: #e8e9ee;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #7269e3;
          border-color: #635be3;
          color: rgb(250,250,254);

          &:hover {
            background-color: #7269e3;
            border-color: #635be3;
            color: rgb(250,250,254);
          }
        }
      }
",
      "
      &.btn-link {
        background-color: rgba(255, 255, 255, 0);
        border-color: rgba(255, 255, 255, 0);
        color: #8cb5ea;
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: transparent;
          border-color: transparent;
          color: #5b85b8;
        }

        &.active {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #5b85b8;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: transparent;
            color: #5b85b8;
          }
        }

        &[disabled],
        &.disabled {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #8cb5ea;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: rgba(255, 255, 255, 0);
            color: #8cb5ea;
          }
        }
      }
",
      "
      &.btn-primary {
        background-color: #710071;
        border-color: #7c357a;
        color: rgb(216,206,216);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #6e2671;
          border-color: #783e79;
          color: #cac2cc;
        }

        &.active {
          background-color: #864a82;
          border-color: #905b8a;
          color: rgb(250,249,250);

          &:hover {
            background-color: #814e7f;
            border-color: #895c86;
            color: #e9e9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #986992;
          border-color: #905b8a;
          color: rgb(251,250,251);

          &:hover {
            background-color: #986992;
            border-color: #905b8a;
            color: rgb(251,250,251);
          }
        }
      }
",
      "
      &.btn-success {
        background-color: #007100;
        border-color: #397a35;
        color: rgb(249,250,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #246f2b;
          border-color: #3f7741;
          color: #e8eaea;
        }

        &.active {
          background-color: #51824a;
          border-color: #638a5b;
          color: rgb(249,250,249);

          &:hover {
            background-color: #537e51;
            border-color: #62855e;
            color: #e8eaea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #729269;
          border-color: #638a5b;
          color: rgb(250,251,250);

          &:hover {
            background-color: #729269;
            border-color: #638a5b;
            color: rgb(250,251,250);
          }
        }
      }
",
      "
      &.btn-warning {
        background-color: #e1e100;
        border-color: #dcdc19;
        color: rgb(50,50,0);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #d2d32b;
          border-color: #cece31;
          color: #3a3c2b;
        }

        &.active {
          background-color: #d7d823;
          border-color: #d2d32b;
          color: rgb(48,48,8);

          &:hover {
            background-color: #c9cb36;
            border-color: #c5c63b;
            color: #393b2c;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #cdce32;
          border-color: #d2d32b;
          color: rgb(79,80,19);

          &:hover {
            background-color: #cdce32;
            border-color: #d2d32b;
            color: rgb(79,80,19);
          }
        }
      }
",
      "
      &.btn-gray {
        background-color: #252D47;
        border-color: #434457;
        color: rgb(191,192,195);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #31384f;
          border-color: #47495b;
          color: #b4b5b9;
        }

        &.active {
          background-color: #585664;
          border-color: #686470;
          color: rgb(249,249,250);

          &:hover {
            background-color: #595866;
            border-color: #666470;
            color: #e8e9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #77717b;
          border-color: #686470;
          color: rgb(250,250,250);

          &:hover {
            background-color: #77717b;
            border-color: #686470;
            color: rgb(250,250,250);
          }
        }
      }
",
    ],
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "light",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;
